Add "SECTIONS" and "SEARCH" icons

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
+  <nav>
+    <span class="sections"><span class="fas fa-bars"></span>SECTIONS</span>
+    <span class="search"><span class="fas fa-search"></span>SEARCH</span>
+  </nav>
+
   <h1>CAPTECH.IO NEWS</h1>
 </header>
