--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,16 @@
 <header>
   <nav>
-    <span class="sections"><span class="fas fa-bars"></span>SECTIONS</span>
-    <span class="search"><span class="fas fa-search"></span>SEARCH</span>
+    <ul>
+      <li class="sections">
+        <span class="icon fas fa-bars"></span>
+        <span class="text">SECTIONS</span>
+      </li>
+
+      <li class="search">
+        <span class="icon fas fa-search"></span>
+        <span class="text">SEARCH</span>
+      </li>
+    </ul>
   </nav>
 
   <h1>CAPTECH.IO NEWS</h1>
