--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,44 @@
 @import "main.scss";
 
 header {
+  line-height: 1.5;
+  margin: 0 auto;
+  width: 90%;
+
+  nav {
+    margin-top: 0.5rem;
+
+    ul {
+      list-style: none;
+    }
+
+    li {
+      display: inline;
+    }
+
+    .search {
+      margin-left: 1rem;
+    }
+
+    .icon {
+      color: $dark-gray;
+      font-size: 1.25rem;
+    }
+
+    .text {
+      bottom: 0.1875rem;
+      color: $light-gray;
+      font: 0.75rem "Arvo", serif;
+      position: relative;
+    }
+  }
+
   h1 {
+    border-top: 1px solid $dark-gray;
     color: $dark-gray;
-    font: bold 2.25rem "Arvo", serif;
-    line-height: 1.5;
+    font: bold 3rem "Arvo", serif;
+    margin-top: 1rem;
+    padding-top: 1rem;
     text-align: center;
   }
 }
