Add rollover effect

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -30,6 +30,15 @@ header {
       color: $light-gray;
       font: 0.75rem "Arvo", serif;
       position: relative;
+      transition: color 0.2s ease-in-out;
+    }
+
+    li:focus,
+    li:hover,
+    li:active {
+      .text {
+        color: $dark-gray;
+      }
     }
   }
 
