Add main navbar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,4 +15,15 @@
 
   <h1>CAPTECH.IO NEWS</h1>
   <h2>{{date}}</h2>
+
+  <nav>
+    <ul>
+      <li><a>WORLD</a></li>
+      <li><a>BUSINESS</a></li>
+      <li><a>OPINION</a></li>
+      <li><a>SPORTS</a></li>
+      <li><a>FASHION &amp; STYLE</a></li>
+      <li><a>VIDEO</a></li>
+    </ul>
+  </nav>
 </header>
