--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,8 +5,9 @@ header {
   margin: 0 auto;
   width: 90%;
 
-  nav {
-    margin-top: 1rem;
+  nav:first-of-type {
+    border-bottom: 1px solid $dark-gray;
+    padding: 1rem 0;
 
     ul {
       list-style: none;
@@ -47,17 +48,39 @@ header {
   }
 
   h1 {
-    border-top: 1px solid $dark-gray;
     color: $dark-gray;
     font: bold 3rem "Arvo", serif;
-    margin-top: 1rem;
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     text-align: center;
   }
 
   h2 {
     color: $dark-gray;
     font: normal 1.1875rem "Arvo", serif;
+    padding-bottom: 1.5rem;
     text-align: center;
+  }
+
+  nav:last-of-type {
+    border-top: 1px solid $dark-gray;
+    padding: 1rem 0;
+    text-align: center;
+
+    ul {
+      list-style: none;
+    }
+
+    li {
+      display: inline;
+    }
+
+    li:not(:first-of-type) {
+      margin-left: 2rem;
+    }
+
+    a {
+      color: $dark-gray;
+      font: normal 1.1875rem "Arvo", serif;
+    }
   }
 }
