--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -81,7 +81,7 @@ header {
     a {
       border-bottom: 2px solid transparent;
       color: $dark-gray;
-      font: normal 1.1875rem "Arvo", serif;
+      font: 1.1875rem "Arvo", serif;
       transition: border-bottom 0.2s ease-in-out;
     }
 
