--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,7 @@
-<h1>{{header}}</h1>
+<section>
+  <h1>{{header}}</h1>
+  <div class="call-to-action">
+    <span class="text">Click to expand</span>
+    <span class="icon fas fa-angle-down"></span>
+  </div>
+</section>
