--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,6 +1,13 @@
 <section>
   <h1>{{header}}</h1>
-  <div class="call-to-action">
+
+  <div
+    class="call-to-action"
+    [class.animated]="isAnimated"
+    (mouseover)="onMouseover()"
+    (mouseout)="onMouseout()"
+    (animationiteration)="onAnimationIterationEnd()">
+
     <span class="text">Click to expand</span>
     <span class="icon fas fa-angle-down"></span>
   </div>
