--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -24,6 +24,7 @@ section {
     .text {
       font: 1rem "Arvo", serif;
       line-height: 1.5;
+      pointer-events: none;
       position: relative;
       top: -0.75rem;
     }
@@ -31,6 +32,20 @@ section {
     .icon {
       font-size: 2.5rem;
       margin-left: 0.25rem;
+      pointer-events: none;
+      position: relative;
+    }
+  }
+
+  @keyframes bounce {
+      0% { top:  0.0rem; }
+     50% { top:  0.5rem; }
+    100% { top:  0.0rem; }
+  }
+
+  .call-to-action.animated {
+    .icon {
+      animation: bounce 0.75s ease-in-out infinite;
     }
   }
 }
