--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,14 +1,17 @@
-<section>
-  <h1>{{header}}</h1>
+<section [class.expanded]="isExpanded">
+  <h1>{{headerOne}}</h1>
 
   <div
     class="call-to-action"
     [class.animated]="isAnimated"
     (mouseover)="onMouseover()"
     (mouseout)="onMouseout()"
-    (animationiteration)="onAnimationIterationEnd()">
+    (animationiteration)="onAnimationIterationEnd()"
+    (click)="onClick()">
 
     <span class="text">Click to expand</span>
     <span class="icon fas fa-angle-down"></span>
   </div>
+
+  <h2>{{headerTwo}}</h2>
 </section>
