--- a/src/app/banner/banner.component.scss
+++ b/src/app/banner/banner.component.scss
@@ -1,74 +1,60 @@
 @import "main.scss";
 
+$transition-speed: 0.5s ease-in-out;
+
 section {
   background-color: $light-gray;
   margin: 0 auto;
   position: relative;
   text-align: center;
   width: 90%;
-
-  h1,
-  h2 {
-    color: $dark-gray;
-    font: italic bold 1.5rem "Arvo", serif;
-  }
-
-  h1 {
-    line-height: 1.5;
-    padding: 2rem 4rem;
-  }
-
-  h2 {
-    line-height: 0;
-    opacity: 0;
-    padding: 0 4rem;
-    transform: scaleY(0);
-    transition:
-      line-height 0.5s ease-in-out,
-      opacity 0.5s ease-in-out,
-      padding 0.5s ease-in-out,
-      transform 0.5s ease-in-out;
-  }
-
-  .call-to-action {
-    color: white;
-    cursor: pointer;
-    opacity: 1;
-    position: absolute;
-    right: 0.75rem;
-    top: 0;
-    transition: opacity 0.5s ease-in-out;
-
-    .text {
-      font: 1rem "Arvo", serif;
-      line-height: 1.5;
-      pointer-events: none;
-      position: relative;
-      top: -0.75rem;
-    }
-
-    .icon {
-      font-size: 2.5rem;
-      margin-left: 0.25rem;
-      pointer-events: none;
-      position: relative;
-    }
-  }
-
-  @keyframes bounce {
-      0% { top:  0.0rem; }
-     50% { top:  0.5rem; }
-    100% { top:  0.0rem; }
-  }
-
-  .call-to-action.animated {
-    .icon {
-      animation: bounce 0.75s ease-in-out infinite;
-    }
-  }
 }
 
-section.expanded {
+h1,
+h2 {
+  color: $dark-gray;
+  font: italic bold 1.5rem "Arvo", serif;
+}
+
+h1 {
+  line-height: 1.5;
+  padding: 2rem 4rem;
+}
+
+h2 {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 4rem;
+  transform: scaleY(0);
+  transition: all $transition-speed;
+}
+
+app-call-to-action {
+  position: absolute;
+  right: 0.75rem;
+  transition: all $transition-speed;
+}
+
+app-call-to-action[action="expand"] {
+  cursor: pointer;
+  opacity: 1;
+  pointer-events: auto;
+  top: 0;
+}
+
+app-call-to-action[action="hide"] {
+  bottom: 0;
+  cursor: default;
+  opacity: 0;
+  pointer-events: none;
+  transform: scaleY(0);
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.expanded {
   h2 {
     line-height: 1.5;
     opacity: 1;
@@ -76,8 +62,16 @@ section.expanded {
     transform: scaleY(1);
   }
 
-  .call-to-action {
+  app-call-to-action[action="expand"] {
+    cursor: default;
     opacity: 0;
     pointer-events: none;
+  }
+
+  app-call-to-action[action="hide"] {
+    cursor: pointer;
+    opacity: 1;
+    pointer-events: auto;
+    transform: scaleY(1);
   }
 }
