--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,96 +1,98 @@
 @import "main.scss";
 
+$transition-speed: 0.2s ease-in-out;
+
 header {
   line-height: 1.5;
   margin: 0 auto;
   width: 90%;
+}
 
-  nav:first-of-type {
-    border-bottom: 1px solid $dark-gray;
-    padding: 1rem 0;
+nav:first-of-type {
+  border-bottom: 1px solid $dark-gray;
+  padding: 1rem 0;
 
-    ul {
-      list-style: none;
-    }
+  ul {
+    list-style: none;
+  }
 
-    li {
-      display: inline;
-    }
+  li {
+    display: inline;
+  }
 
-    .search {
-      margin-left: 1rem;
-    }
+  .search {
+    margin-left: 1rem;
+  }
 
-    .icon {
-      color: $dark-gray;
-      font-size: 1.25rem;
-    }
+  .icon {
+    color: $dark-gray;
+    font-size: 1.25rem;
+  }
 
+  .text {
+    bottom: 0.1875rem;
+    color: $light-gray;
+    font: 0.75rem "Arvo", serif;
+    position: relative;
+    transition: all $transition-speed;
+  }
+
+  li:hover {
+    cursor: pointer;
+  }
+
+  li:focus,
+  li:hover,
+  li:active {
     .text {
-      bottom: 0.1875rem;
-      color: $light-gray;
-      font: 0.75rem "Arvo", serif;
-      position: relative;
-      transition: color 0.2s ease-in-out;
-    }
-
-    li:hover {
-      cursor: pointer;
-    }
-
-    li:focus,
-    li:hover,
-    li:active {
-      .text {
-        color: $dark-gray;
-      }
-    }
-  }
-
-  h1 {
-    color: $dark-gray;
-    font: bold 3rem "Arvo", serif;
-    padding-top: 1.5rem;
-    text-align: center;
-  }
-
-  h2 {
-    color: $dark-gray;
-    font: normal 1.1875rem "Arvo", serif;
-    padding-bottom: 1.5rem;
-    text-align: center;
-  }
-
-  nav:last-of-type {
-    border-top: 1px solid $dark-gray;
-    padding: 1rem 0;
-    text-align: center;
-
-    ul {
-      list-style: none;
-    }
-
-    li {
-      display: inline;
-    }
-
-    li:not(:first-of-type) {
-      margin-left: 2rem;
-    }
-
-    a {
-      border-bottom: 2px solid transparent;
       color: $dark-gray;
-      font: 1.1875rem "Arvo", serif;
-      transition: border-bottom 0.2s ease-in-out;
     }
+  }
+}
 
-    li:focus,
-    li:hover,
-    li:active {
-      a {
-        border-bottom: 2px solid $dark-gray;
-      }
+h1 {
+  color: $dark-gray;
+  font: bold 3rem "Arvo", serif;
+  padding-top: 1.5rem;
+  text-align: center;
+}
+
+h2 {
+  color: $dark-gray;
+  font: normal 1.1875rem "Arvo", serif;
+  padding-bottom: 1.5rem;
+  text-align: center;
+}
+
+nav:last-of-type {
+  border-top: 1px solid $dark-gray;
+  padding: 1rem 0;
+  text-align: center;
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    display: inline;
+  }
+
+  li:not(:first-of-type) {
+    margin-left: 2rem;
+  }
+
+  a {
+    border-bottom: 2px solid transparent;
+    color: $dark-gray;
+    font: 1.1875rem "Arvo", serif;
+    transition: all $transition-speed;
+  }
+
+  li:focus,
+  li:hover,
+  li:active {
+    a {
+      border-bottom: 2px solid $dark-gray;
     }
   }
 }
