--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,8 @@
-@import "partials/_reset.scss";
-
 @import "partials/_fonts.scss";
+@import "partials/_functions.scss";
+@import "partials/_reset.scss";
 @import "partials/_variables.scss";
+
+html {
+  font-size: 16px; // Sets root em
+}
