--- a/src/sass/partials/_fonts.scss
+++ b/src/sass/partials/_fonts.scss
@@ -1,1 +1,2 @@
 @import url("https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
