--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,6 +1,6 @@
 @import "main.scss";
 
-.home-page {
+.home-page ::ng-deep {
   color: $dark-gray;
   display: flex;
   margin: 0 auto;
@@ -62,7 +62,7 @@
       display: flex;
       flex-wrap: wrap;
 
-      h1 {
+      > h1 {
         font: italic normal 1.33rem "Arvo", serif;
         text-align: center;
         width: 100%;
@@ -71,7 +71,7 @@
       article {
         width: 50%;
 
-        h2 {
+        h1 {
           font: italic normal 1rem "Arvo", serif;
           line-height: 1.25rem;
         }
@@ -89,12 +89,16 @@
     }
 
     .travel {
-      h1 {
+      display: flex;
+      flex-wrap: wrap;
+
+      > h1 {
         font: bold 1rem "Arvo", serif;
         overflow: hidden;
+        width: 100%;
       }
 
-      h1::after {
+      > h1::after {
         bottom: 0.1rem;
         color: $light-gray;
         content: repeat("\f054", 256);
@@ -105,7 +109,9 @@
       }
 
       article {
-        h2 {
+        width: 50%;
+
+        h1 {
           font: bold 1rem "Arvo", serif;
           line-height: 1.25rem;
         }
@@ -115,15 +121,25 @@
           line-height: 1.25rem;
         }
       }
+
+      article:not(:first-of-type) {
+        box-sizing: border-box;
+        padding-left: 1rem;
+      }
     }
   }
 
-  h1,
-  h2 {
+  h1 {
     margin-top: 1rem;
   }
 
   p {
-    margin-top: 0.25rem;
+    margin-top: 0.5rem;
+  }
+
+  .location {
+    font-weight: bold;
+    margin-right: 0.25rem;
+    text-transform: uppercase;
   }
 }
