--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -137,7 +137,7 @@
     margin-top: 0.5rem;
   }
 
-  .location {
+  .placeline {
     font-weight: bold;
     margin-right: 0.25rem;
     text-transform: uppercase;
