Add photo placeholders

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -56,9 +56,9 @@ header {
     text-align: center;
   }
 
-  h2 {
+  .date {
     color: $dark-gray;
-    font: normal 1.19rem "Arvo", serif;
+    font: 1.19rem "Arvo", serif;
     padding-bottom: 1.5rem;
     text-align: center;
   }
