--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,21 +1,22 @@
 @import "main.scss";
 
 .home-page ::ng-deep {
-  color: $dark-gray;
   display: flex;
   margin: 0 auto;
   width: 90%;
 
   aside:first-of-type {
+    box-sizing: border-box;
+    padding-right: 0.5rem;
     width: 20%;
 
     article {
-      h1 {
+      .headline {
         font: italic bold 1.58rem "Arvo", serif;
         line-height: 1.67rem;
       }
 
-      p {
+      .body {
         font: normal 1rem "Arvo", serif;
         line-height: 1.25rem;
       }
@@ -23,86 +24,94 @@
 
     article:not(:first-of-type) {
       border-top: 2px solid $light-gray;
-      margin-top: 1rem;
+      padding-top: 1rem;
     }
   }
 
   main {
     box-sizing: border-box;
-    padding-left: 1rem;
+    padding: 0 0.5rem;
     width: 40%;
 
-    .video {
-      align-items: center;
-      display: flex;
-      justify-content: center;
-      margin-top: 1rem;
-
-      video {
-        background-color: $dark-gray;
-        width: 100%;
-      }
-
-      .overlay {
-        color: white;
-        font: 1rem "Arvo", serif;
-        position: absolute;
-      }
-    }
-
     article {
-      h1 {
+      .headline {
         font: italic 1.33rem "Arvo", serif;
         line-height: 1.67rem;
       }
 
-      p {
+      .body {
         font: normal 0.83rem "Arvo", serif;
         line-height: 1.25rem;
       }
     }
 
-    article:first-of-type h1 {
+    article:first-of-type .video {
+      height: 0;
+      margin-bottom: 1rem;
+      padding: 33.33% 0;
+    }
+
+    article:first-of-type .headline {
       font-weight: normal;
     }
 
-    article:not(:first-of-type) h1 {
+    article:not(:first-of-type) .headline {
       font-weight: bold;
+    }
+
+    article:last-of-type .photo {
+      float: right;
+      height: 0;
+      margin: 0 0 0.25rem 1rem;
+      padding: 12.5% 0;
+      width: 25%;
     }
   }
 
   aside:last-of-type {
     box-sizing: border-box;
-    padding-left: 1rem;
+    padding-left: 0.5rem;
     width: 40%;
 
     .opinion {
       display: flex;
       flex-wrap: wrap;
 
-      > h1 {
+      h2 {
         font: italic normal 1.33rem "Arvo", serif;
         text-align: center;
+        margin-top: 1rem;
         width: 100%;
       }
 
       article {
         width: 50%;
 
-        h1 {
+        .headline {
           font: italic normal 1rem "Arvo", serif;
           line-height: 1.25rem;
         }
 
-        p {
+        .body {
           font: 0.83rem "Arvo", serif;
           line-height: 1.25rem;
         }
       }
 
-      article:not(:first-of-type) {
+      article:first-of-type {
         box-sizing: border-box;
-        padding-left: 1rem;
+        padding-right: 0.5rem;
+      }
+
+      article:last-of-type {
+        box-sizing: border-box;
+        padding-left: 0.5rem;
+
+        .photo {
+          height: 0;
+          margin: 0.5rem 0;
+          padding: 20% 0;
+        }
       }
     }
 
@@ -110,13 +119,14 @@
       display: flex;
       flex-wrap: wrap;
 
-      > h1 {
+      h2 {
         font: bold 1rem "Arvo", serif;
+        margin-top: 1rem;
         overflow: hidden;
         width: 100%;
       }
 
-      > h1::after {
+      h2::after {
         bottom: 0.1rem;
         color: $light-gray;
         content: repeat("\f054", 256);
@@ -129,7 +139,7 @@
       article {
         width: 50%;
 
-        h1 {
+        h3 {
           font: bold 1rem "Arvo", serif;
           line-height: 1.25rem;
         }
@@ -140,24 +150,50 @@
         }
       }
 
-      article:not(:first-of-type) {
+      article:first-of-type {
         box-sizing: border-box;
-        padding-left: 1rem;
+        padding-right: 0.5rem;
+
+        .photo {
+          height: 0;
+          margin-top: 0.5rem;
+          padding: 25% 0;
+        }
+      }
+
+      article:last-of-type {
+        box-sizing: border-box;
+        padding-left: 0.5rem;
+
+        .photo {
+          height: 0;
+          margin-top: 0.5rem;
+          padding: 10% 0;
+        }
       }
     }
   }
 
-  h1 {
+  article {
     margin-top: 1rem;
-  }
 
-  p {
-    margin-top: 0.5rem;
-  }
+    .video,
+    .photo {
+      align-items: center;
+      background-color: $dark-gray;
+      color: white;
+      display: flex;
+      font: 1rem "Arvo", serif;
+      justify-content: center;
+    }
 
-  .placeline {
-    font-weight: bold;
-    margin-right: 0.25rem;
-    text-transform: uppercase;
+    .body {
+      margin-top: 0.5rem;
+
+      .placeline {
+        font-weight: bold;
+        margin-right: 0.25rem;
+      }
+    }
   }
 }
