Get category from ContentService

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,12 +18,12 @@
 
   <nav>
     <ul>
-      <li><a>WORLD</a></li>
-      <li><a>BUSINESS</a></li>
-      <li><a>OPINION</a></li>
-      <li><a>SPORTS</a></li>
-      <li><a>FASHION &amp; STYLE</a></li>
-      <li><a>VIDEO</a></li>
+      <li><a routerLink="/category/world">WORLD</a></li>
+      <li><a routerLink="/category/business">BUSINESS</a></li>
+      <li><a routerLink="/category/opinion">OPINION</a></li>
+      <li><a routerLink="/category/sports">SPORTS</a></li>
+      <li><a routerLink="/category/fashion">FASHION &amp; STYLE</a></li>
+      <li><a routerLink="/category/video">VIDEO</a></li>
     </ul>
   </nav>
 </header>
