--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -84,6 +84,7 @@ header {
       border-bottom: 2px solid transparent;
       color: $dark-gray;
       font: 1.19rem "Arvo", serif;
+      text-decoration: none;
       transition: all $transition-speed;
     }
 
