--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -17,7 +17,7 @@
       }
 
       .body {
-        font: normal 1rem "Arvo", serif;
+        font: 1rem "Arvo", serif;
         line-height: 1.25rem;
       }
     }
@@ -40,7 +40,7 @@
       }
 
       .body {
-        font: normal 0.83rem "Arvo", serif;
+        font: 0.83rem "Arvo", serif;
         line-height: 1.25rem;
       }
     }
