--- a/src/app/category-page/category-page.component.html
+++ b/src/app/category-page/category-page.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="mainArticle && asideArticles" class="category-page">
   <main [class.full-width]="asideArticles.length === 0">
-    <article [routerLink]="linkTo(mainArticle)">
+    <article [routerLink]="mainArticle | routerLink">
       <h2 class="headline" [innerHtml]="mainArticle | headline"></h2>
 
       <div *ngIf="displayVideo(mainArticle)" class="video">[VIDEO]</div>
@@ -29,7 +29,7 @@
   </main>
 
   <aside *ngIf="asideArticles.length > 0">
-    <article *ngFor="let article of asideArticles" [routerLink]="linkTo(article)">
+    <article *ngFor="let article of asideArticles" [routerLink]="article | routerLink">
       <h2 class="headline" [innerHtml]="article | headline"></h2>
 
       <p class="body">
