Make header link to home page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,10 @@
     </ul>
   </nav>
 
-  <h1>CAPTECH.IO NEWS</h1>
-  <p class="date">{{date}}</p>
+  <div routerLink="/">
+    <h1>CAPTECH.IO NEWS</h1>
+    <p class="date">{{date}}</p>
+  </div>
 
   <nav>
     <ul>
