--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -49,18 +49,23 @@ header {
     }
   }
 
-  h1 {
-    color: $dark-gray;
-    font: bold 3rem "Arvo", serif;
-    padding-top: 1.5rem;
-    text-align: center;
-  }
+  div {
+    cursor: pointer;
+    outline: none;
 
-  .date {
-    color: $dark-gray;
-    font: 1.19rem "Arvo", serif;
-    padding-bottom: 1.5rem;
-    text-align: center;
+    h1 {
+      color: $dark-gray;
+      font: bold 3rem "Arvo", serif;
+      padding-top: 1.5rem;
+      text-align: center;
+    }
+
+    .date {
+      color: $dark-gray;
+      font: 1.19rem "Arvo", serif;
+      padding-bottom: 1.5rem;
+      text-align: center;
+    }
   }
 
   nav:last-of-type {
