--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,11 +1,7 @@
 <div *ngIf="banners" class="banner" [class.expanded]="isExpanded">
   <h1>{{banners[0].message}}</h1>
-
-  <app-call-to-action action="expand" (click)="toggleExpansion()">
-  </app-call-to-action>
+  <app-call-to-action action="expand" (click)="toggleExpansion()"></app-call-to-action>
 
   <h2>{{banners[1].message}}</h2>
-
-  <app-call-to-action action="hide" (click)="toggleExpansion()">
-  </app-call-to-action>
+  <app-call-to-action action="hide" (click)="toggleExpansion()"></app-call-to-action>
 </div>
