--- a/src/app/article-page/article-page.component.html
+++ b/src/app/article-page/article-page.component.html
@@ -1,6 +1,10 @@
-<div *ngIf="article" class="article-page">
-  <main>
-    <article>
+<div class="article-page">
+  <main *ngIf="httpErrorResponse">
+    <p class="httpErrorResponse">{{httpErrorResponse}}</p>
+  </main>
+
+  <main *ngIf="!httpErrorResponse">
+    <article *ngIf="article">
       <h2 class="headline" [innerHtml]="article | headline"></h2>
 
       <div *ngIf="displayVideo(article)" class="video">[VIDEO]</div>
