--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="banners" class="banner" [class.expanded]="isExpanded">
+<div *ngIf="!httpErrorResponse && banners" class="banner" [class.expanded]="isExpanded">
   <h1>{{banners[0].message}}</h1>
   <app-call-to-action action="expand" (click)="toggleExpansion()"></app-call-to-action>
 
