--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
       <li *ngFor="let category of categories.slice(0, -1)">
         <a
           routerLink="/category/{{category.shortName}}"
-          [innerHTML]="category.displayName.toUpperCase() | htmlEntities">
+          [innerHTML]="category.displayName.toUpperCase() | htmlEntities | nbsp">
         </a>
       </li>
     </ul>
