Add settings icon to header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,11 @@
         <span class="icon fas fa-search"></span>
         <span class="text">SEARCH</span>
       </li>
+
+      <li class="settings">
+        <span class="text">{{username}}&hellip;</span>
+        <span class="icon fas fa-cogs"></span>
+      </li>
     </ul>
   </nav>
 
